<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.occulus.rest.ProponCampanna$PlaceholderFragment" >

    <TextView
        android:id="@+id/tituloProponCamp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:text="@string/proponUnaCampanna"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/textoProducto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tituloProponCamp"
        android:layout_marginTop="20dp"
        android:text="@string/producto" />

    <EditText
        android:id="@+id/producto"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tituloProponCamp"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="10dp"
        android:inputType="text" />

    <TextView
        android:id="@+id/textoMarca"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textoProducto"
        android:layout_marginTop="20dp"
        android:text="@string/marca" />

    <EditText
        android:id="@+id/marca"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textoProducto"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="10dp"
        android:inputType="text" />

    <TextView
        android:id="@+id/textoModelo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textoMarca"
        android:layout_marginTop="20dp"
        android:text="@string/modelo" />

    <EditText
        android:id="@+id/modelo"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textoMarca"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="5dp"
        android:inputType="text" />

    <TextView
        android:id="@+id/textoCategoria"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textoModelo"
        android:layout_marginTop="20dp"
        android:text="@string/categoria" />

    <Spinner
        android:id="@+id/categorias"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textoModelo"
        android:layout_marginLeft="100dp" 
                android:layout_marginTop="10dp"
        />

    <TextView
        android:id="@+id/textoPrecio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textoCategoria"
        android:layout_marginTop="20dp"
        android:text="@string/precioDeseado" />

    <EditText
        android:id="@+id/precio"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textoCategoria"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="10dp"
        android:inputType="number" />

    <Button
        android:id="@+id/enviarCampanna"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textoPrecio"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:text="@string/enviar" />

</RelativeLayout>