<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.occulus.rest.Registro$PlaceholderFragment" >

    <TextView
        android:id="@+id/tituloRegistro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/registro"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/textoEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tituloRegistro"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="30dp"
        android:text="@string/email" />

    <EditText
        android:id="@+id/email"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tituloRegistro"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="15dp"
        android:layout_toRightOf="@id/textoEmail"
        android:inputType="textEmailAddress" />

    <TextView
        android:id="@+id/textoNombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textoEmail"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="30dp"
        android:text="@string/nombre" />

    <EditText
        android:id="@+id/nombre"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/email"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="15dp"
        android:layout_toRightOf="@id/textoNombre"
        android:inputType="text" />

    <TextView
        android:id="@+id/textoPass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textoNombre"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="30dp"
        android:text="@string/contrasenna" />

    <EditText
        android:id="@+id/pass"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/nombre"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_toRightOf="@id/textoPass"
        android:inputType="textPassword" />

    <TextView
        android:id="@+id/textoConfirmPass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textoPass"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="30dp"
        android:text="@string/confirmarContrasenna" />

    <EditText
        android:id="@+id/confirmPass"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/pass"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_toRightOf="@id/textoConfirmPass"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/boton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textoConfirmPass"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:text="@string/enviar" />

</RelativeLayout>